:bug: Fixed flickering when reloading in archive page. :art: smoothen the auto scrolling

--- a/src/css/App.styl
+++ b/src/css/App.styl
@@ -30,7 +30,7 @@ svg-size(size)
 
 html
     background-color: #222F43;
-
+    scroll-behavior: smooth;
 
 
 .container
@@ -794,6 +794,16 @@ html
     font-size 16px
     font-family "Noto Sans"
     margin-left 16px
+
+.detail__p--wait-for-update
+    white-space 'pre-wrap'
+    font-size 1.5rem
+    line-height 2
+    opacity 0.7
+    font-family "Inder"
+    margin 5em auto
+    color #cdd
+    text-align center
 
 // // // //
 // About // 
